--- a/index.css
+++ b/index.css
@@ -103,6 +103,7 @@ nav a:hover {
 
 .content {
     padding: 20px;
+    margin-bottom: 20%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -258,9 +259,11 @@ footer {
         border-bottom: 1px solid #444; */
     }
     .grid-item h2 {
-        color: white;
         margin-top: 0px;
         font-size: 100%;
+    }
+    .main h1 {
+        font-size: 150%;
     }
 
 }
