--- a/index.css
+++ b/index.css
@@ -244,6 +244,34 @@ footer {
     width: 100%;
 }
 
+button {
+    margin-bottom: 15px;
+    padding: 10px 15px;
+    font-size: 16px;
+    background-color: #cea035d8;
+    color: white;
+}
+.leaderboard {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: rgb(255, 255, 255);
+    width: 100%;
+    padding-bottom: 2%;
+    padding-left: 1%;
+    padding-right: 1%;
+    border-radius: 20px;
+    background-color: rgba(0, 0, 0, 0.5);
+    text-align: left;
+}
+.leaderboard li {
+    margin: 5px 0;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+
 
 
 @media (max-width: 600px) {
@@ -265,5 +293,4 @@ footer {
     .main h1 {
         font-size: 150%;
     }
-
 }
