--- a/index.css
+++ b/index.css
@@ -148,6 +148,10 @@ nav a:hover {
     border-radius: 20px;
     margin-left: -5px;
 }
+.iframe {
+    max-width: 100%;
+    height: 55vh;
+}
 
 .project-list {
     display: grid;
@@ -309,4 +313,8 @@ button {
     .main h1 {
         font-size: 150%;
     }
+    .iframe {
+    max-width: 120%;
+    height: 25vh;
+}
 }
